# data-driven-controller

./: .gitignore  README.md  environment-mac.yml  environment.yml  pyproject.toml  setup.py
sandbox/: experiment_affine.py  experiment_cart_pole.py  experiment_deepc.py  experiment_double_inv_pendulum.py  experiment_inv_pendulum.py  experiment_l1.py  experiment_linear_system.py  experiment_siso.py  experiment_siso_offline.py  experiment_sparsity.py
src/ddc/: __init__.py  dd_controller.py  deepc.py  gauss.py  general_system.py  linear_system.py  solvers.py
