[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ddc"
dynamic = ["version"]
description = "Direct Data-Driven Control, with an eye on biological plausibility"
readme = "README.md"
authors = [ { name = "Tiberiu Tesileanu", email = "ttesileanu@gmail.com" } ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]
keywords = ["control", "biological model", "dynamical system", "research"]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pydove",
    "ipykernel",
    "jupyter",
    "jupytext",
]
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/ttesileanu/data-driven-controller"

[tool.setuptools_scm]
write_to = "src/ddc/_version.py"
